[gd_scene load_steps=2 format=3 uid="uid://dkvjop71jseg6"]

[ext_resource type="Script" uid="uid://pnchtjdqye7r" path="res://Scripts/UI/convoy_list_panel.gd" id="1_7so3h"]

[node name="ConvoyListPanel" type="PanelContainer"]
script = ExtResource("1_7so3h")

[node name="MainVBox" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="ToggleButton" type="Button" parent="MainVBox"]
layout_mode = 2
text = "Convoys"

[node name="ListScrollContainer" type="ScrollContainer" parent="MainVBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
follow_focus = true

[node name="ConvoyItemsContainer" type="VBoxContainer" parent="MainVBox/ListScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
